--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
 
 
     <title>Startpage</title>
@@ -40,9 +41,6 @@
 </div>
 
 
-<div>
-        <h1 id="clock"></h1>
-</div>
 
 
 <div id="link-lists">
@@ -89,6 +87,9 @@
 
 </div>
 
+<div>
+        <h1 id="clock"></h1>
+</div>
 
 
 
