--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet"> 
-
-
+    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Permanent+Marker&display=swap" rel="stylesheet"> 
     <title>Startpage</title>
 
 </head>
@@ -27,18 +25,19 @@
 <div class="content">
 
 <div>
-	<h1 id="heading"> Startpage</h1>
+    <h1 id="heading"> Startpage</h1>
 </div>
 
 
 <div class="search">
-					<form method="get" action="http://www.duckduckgo.com/">
-						<div class="search">
-							<input name="q" type="text" placeholder="Search" autocomplete="off">
-						</div>
-					</form>
+                    <form method="get" action="http://www.duckduckgo.com/">
+                        <div class="search">
+                            <input name="q" type="text" placeholder="Search" autocomplete="off">
+                        </div>
+                    </form>
 
 </div>
+
 
 
 
@@ -46,31 +45,30 @@
 <div id="link-lists">
 
 <div class="column-left">
-                <ul>
-                <h2>Webdev</h2>
-                <li><a href="https://css-tricks.com">CSS-tricks</a></li>
-                <li><a href="https://coolors.co/323047">Colour Picker</a></li>
-                <li><a href="https://coolors.co/">Colour schemes</a></li>
-                <li><a href="http://gridcss.com/">Grid CSS Generator</a></li>
-                <li class="link-list-item"><a class="link" href="https://fonts.google.com/">google fonts</a></li>
+        <ul><h2>list2</h2>
+                <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
+                <li><a class="link-list-item" href="#">Linkly Link</a></li>
+                <li><a class="link-list-item" href="#">Linkzoid</a></li>
+                <li><a class="link-list-item" href="#">Link</a></li>
+                <li><a class="link-list-item" href="#">Link 22</a></li>
+                <li><a class="link-list-item" href="#">Link me up fam</a></li>
                 </ul>
 </div>
 
-    <div class="column-center"> 
-        <h2>Work</h2>
-			<ul>
-                    <li class="link-list-item"><a class="link" href="https://cloud.sophos.com/manage/dashboard">Sophos</a></li>
-                    <li class="link-list-item"><a class="link" href="https://on.spiceworks.com/tickets">Spiceworks</a></li>
-                    <li class="link-list-item"><a class="link" href="https://identity.symanteccloud.com/Logon">Symantec</a></li>
-                    <li class="link-list-item"><a class="link" href="https://acc-av-001:8443/manage/account/login?redirect=%2Fmanage%2Fsite%2Fdefault%2Fdashboard">Unifi AP</a></li>
-					<li class="link-list-item"><a class="link" href="https://www.123-reg.co.uk/secure">123-Reg</a></li>
-					<li class="link-list-item"><a class="link" href="https://acclaim.3cx.co.uk:5001/#/login">3CX Admin</a></li>
-			</ul>
+    <div class="column-center">
+        <ul><h2>Webdev</h2>
+            <li class="link-list-item"><a href="https://css-tricks.com">CSS-tricks</a></li>
+            <li class="link-list-item"><a href="https://coolors.co/323047">Colour Picker</a></li>
+            <li class="link-list-item"><a href="https://coolors.co/">Colour schemes</a></li>
+            <li class="link-list-item"><a href="http://gridcss.com/">Grid CSS Generator</a></li>
+            <li class="link-list-item"><a class="link" href="https://fonts.google.com/">google fonts</a></li>
+            </ul>
+
+
     </div>
 
     <div class="column-right">
-        <h2>Reddit</h2>
-            <ul>
+            <ul><h2>Reddit</h2>
             <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/techsupportgore/">TechSupportGore</a></li>
             <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/ProgrammerHumor/">ProgrammerHumor</a></li>
             <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
@@ -87,10 +85,10 @@
 
 </div>
 
+
 <div>
         <h1 id="clock"></h1>
 </div>
-
 
 
 </body>
