--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
 <div id="link-lists">
 
 <div class="column-left">
-        <ul><h2>list2</h2>
+        <ul><h2>Links</h2>
                 <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
-                <li><a class="link-list-item" href="#">Linkly Link</a></li>
-                <li><a class="link-list-item" href="#">Linkzoid</a></li>
+                <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
+                <li><a class="link-list-item" href="https://www.spiceworks.com/">Spiceworks</a></li>
                 <li><a class="link-list-item" href="#">Link</a></li>
                 <li><a class="link-list-item" href="#">Link 22</a></li>
-                <li><a class="link-list-item" href="#">Link me up fam</a></li>
                 </ul>
 </div>
 
