--- a/index.html
+++ b/index.html
@@ -8,78 +8,82 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="clock.js"></script>
 
-     <!-- fonts -->
+    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Permanent+Marker&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Covered+By+Your+Grace&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
     <title>Startpage</title>
 
 </head>
 
 <body onload="startTime()">
 
-<div class="content">
+    <div class="content">
 
-<div>
-    <h1 id="heading">Startpage</h1>
-</div>
+        <div>
+            <h1 id="heading">Startpage</h1>
+        </div>
 
-<div class="search">
-        <form method="get" action="http://www.duckduckgo.com/">
-            <div class="search">
-                <input name="q" type="text" placeholder="Search" autocomplete="off">
-            </div>
-        </form>
+        <div class="search">
+            <form method="get" action="http://www.duckduckgo.com/">
+                <div class="search">
+                    <input name="q" type="text" placeholder="Search" autocomplete="off">
+                </div>
+            </form>
 
-</div>
+        </div>
 
 
-<div id="link-lists">
+        <div id="link-lists">
 
-<div class="column-left">
-        <ul><h2>Links</h2>
-                <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
-                <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
-                <li><a class="link-list-item" href="https://www.spiceworks.com/">Spiceworks</a></li>
+            <div class="column-left">
+                <ul>
+                    <h2>Links</h2>
+                    <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
+                    <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
+                    <li><a class="link-list-item" href="https://www.spiceworks.com/">Spiceworks</a></li>
                 </ul>
-</div>
+            </div>
 
-    <div class="column-center">
-        <ul><h2>Webdev</h2>
-            <li class="link-list-item"><a href="https://css-tricks.com">CSS-tricks</a></li>
-            <li class="link-list-item"><a href="https://coolors.co/323047">Colour Picker</a></li>
-            <li class="link-list-item"><a href="https://coolors.co/">Colour schemes</a></li>
-            <li class="link-list-item"><a href="http://gridcss.com/">Grid CSS Generator</a></li>
-            <li class="link-list-item"><a class="link" href="https://fonts.google.com/">google fonts</a></li>
-            </ul>
+            <div class="column-center">
+                <ul>
+                    <h2>Webdev</h2>
+                    <li class="link-list-item"><a href="https://css-tricks.com">CSS-tricks</a></li>
+                    <li class="link-list-item"><a href="https://coolors.co/323047">Colour Picker</a></li>
+                    <li class="link-list-item"><a href="https://coolors.co/">Colour schemes</a></li>
+                    <li class="link-list-item"><a href="http://gridcss.com/">Grid CSS Generator</a></li>
+                    <li class="link-list-item"><a class="link" href="https://fonts.google.com/">google fonts</a></li>
+                </ul>
+
+
+            </div>
+
+            <div class="column-right">
+                <ul>
+                    <h2>Reddit</h2>
+                    <li class="link-list-item"><a class="link"
+                            href="https://www.reddit.com/r/techsupportgore/">TechSupportGore</a></li>
+                    <li class="link-list-item"><a class="link"
+                            href="https://www.reddit.com/r/ProgrammerHumor/">ProgrammerHumor</a></li>
+                    <li class="link-list-item"><a class="link"
+                            href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
+                </ul>
+
+            </div>
+
+        </div>
+
 
 
     </div>
 
-    <div class="column-right">
-            <ul><h2>Reddit</h2>
-            <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/techsupportgore/">TechSupportGore</a></li>
-            <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/ProgrammerHumor/">ProgrammerHumor</a></li>
-            <li class="link-list-item"><a class="link" href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
-            </ul>
 
-    </div>
-
-
-</div>
-
-
-
-
-
-</div>
-
-
-<div>
+    <div>
         <h1 id="clock"></h1>
-</div>
+    </div>
 
 
 </body>
