--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                             href="https://www.reddit.com/r/ProgrammerHumor/">ProgrammerHumor</a></li>
                     <li class="link-list-item"><a class="link"
                             href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
+                    <li class="link-list-item"><a class="link"
+                                href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
                 </ul>
 
             </div>
