--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <li class="link-list-item"><a class="link"
                             href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
                     <li class="link-list-item"><a class="link"
-                                href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
+                            href="https://www.reddit.com/r/bigtiddygothgf/">BTGGF</a></li>
                 </ul>
 
             </div>
