--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                     <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
                     <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
                     <li><a class="link-list-item" href="https://www.spiceworks.com/">Spiceworks</a></li>
+                    <li><a class="link-list-item" href="https://github.com/Mitch454/">@Mitch454</a></li>
+
                 </ul>
             </div>
 
@@ -57,7 +59,7 @@
 
             </div>
 
-            
+
             <div class="column-right">
                 <ul>
                     <h2>Reddit</h2>
