--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="clock.js"></script>
 
-    <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
@@ -30,7 +29,6 @@
                     <input name="q" type="text" placeholder="Search" autocomplete="off">
                 </div>
             </form>
-
         </div>
 
         <div id="link-lists">
@@ -39,11 +37,9 @@
                 <ul>
                     <h2>Links</h2>
                     <li><a class="link-list-item" href="https://mail.google.com/mail/u/0/#inbox">Gmail</a></li>
-                    <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
                     <li><a class="link-list-item" href="https://www.spiceworks.com/">Spiceworks</a></li>
-                    <li><a class="link-list-item" href="https://github.com/Mitch454/">@Mitch454</a></li>
-
-
+                    <li><a class="link-list-item" href="https://github.com/Mitch454/">Github</a></li>
+                    <li><a class="link-list-item" href="https://stackoverflow.com/">Stack Overflow</a></li>
                     
                 </ul>
             </div>
@@ -54,32 +50,35 @@
                     <li class="link-list-item"><a href="https://css-tricks.com">CSS-tricks</a></li>
                     <li class="link-list-item"><a href="https://coolors.co/323047">Colour Picker</a></li>
                     <li class="link-list-item"><a href="https://coolors.co/">Colour schemes</a></li>
-                    <li class="link-list-item"><a href="http://gridcss.com/">Grid CSS Generator</a></li>
-                    <li class="link-list-item"><a class="link" href="https://fonts.google.com/">google fonts</a></li>
+                    <li class="link-list-item"><a class="link" href="https://fonts.google.com/">Google fonts</a></li>
                 </ul>
 
 
             </div>
-
 
             <div class="column-right">
                 <ul>
-                    <h2>Reddit</h2>
-                    <li class="link-list-item"><a class="link"
+                    <h2>Misc</h2>
+                            
+                        <li class="link-list-item"><a class="link"
                             href="https://www.reddit.com/r/techsupportgore/">TechSupportGore</a></li>
-                    <li class="link-list-item"><a class="link"
-                            href="https://www.reddit.com/r/ProgrammerHumor/">ProgrammerHumor</a></li>
-                    <li class="link-list-item"><a class="link"
-                            href="https://www.reddit.com/r/talesfromtechsupport">TFTS</a></li>
-                    <li class="link-list-item"><a class="link"
-                            href="https://www.reddit.com/r/bigtiddygothgf/">BTGGF</a></li>
-                </ul>
 
+                            <li class="link-list-item"><a class="link"
+                            href="https://crontab.tech/every-10-minutes">Crontabs</a></li>
+
+                            <li class="link-list-item"><a class="link"
+                            href="https://www.reddit.com/r/talesfromtechsupport"></a></li>
+
+                            <li class="link-list-item"><a class="link"
+                            href="https://www.4chan.org/wg/">WG</a></li>
+                        </ul>
             </div>
 
-        </div>
+    </div>
 
     </div>
+
+
     <div>
         <h1 id="clock"></h1>
     </div>
