--- a/index.html
+++ b/index.html
@@ -311,21 +311,21 @@
 
                     <div class="column is-4">
                         <a href="#">
-                            <figure class="image is-2by1 work-item"
-                                style="background-image: url('https://picsum.photos/id/0/1600/900');"></figure>
+                            <figure class="image is-2by1 work-item" style="background-image: url('img/pane2.jpg');">
+                            </figure>
                         </a>
                     </div>
                     <div class="column is-4">
                         <a href="#">
-                            <figure class="image is-2by1 work-item"
-                                style="background-image: url('https://picsum.photos/id/26/1600/900');"></figure>
+                            <figure class="image is-2by1 work-item" style="background-image: url('img/pane3.jpg');">
+                            </figure>
                         </a>
                     </div>
 
                     <div class="column is-4">
                         <a href="#">
-                            <figure class="image is-2by1 work-item"
-                                style="background-image: url('https://picsum.photos/id/15/1600/900');"></figure>
+                            <figure class="image is-2by1 work-item" style="background-image: url('img/pane1.jpg');">
+                            </figure>
                         </a>
                     </div>
                 </div>
