--- a/index.html
+++ b/index.html
@@ -61,12 +61,13 @@
 
     </section>
 
-    <!-- <ul id="navigation" class="navbar u-center">
-      <li><a href="#about"><h6>About</h6></a></li>
-      <li><a href="#about"><h6>Blog</h6></a></li>
-      <li><a href="#projects"><h6>Projects</h6></a></li>
-      <li><a href="#contact"><h6>Contact</h6></a></li>
-    </ul> -->
+
+<ul id="navigation" class="navbar u-center"> 
+      <!-- <li><a href="#about"><h6>About</h6></a></li> -->
+      <!-- <li><a href="#about"><h6>Blog</h6></a></li> -->
+      <!-- <li><a href="#projects"><h6>Projects</h6></a></li> -->
+      <li><a href="/password.html"><h6>Page 2</h6></a></li>
+    </ul> 
 
    
 
