--- a/index.html
+++ b/index.html
@@ -60,16 +60,15 @@
 
 
     </section>
+<br>
+<br>
+    <div class="u-center">
+
+      <a href="/password.html"><h6>Password</h6></a>
+
+    </div>
 
 
-<ul id="navigation" class="navbar u-center"> 
-      <!-- <li><a href="#about"><h6>About</h6></a></li> -->
-      <!-- <li><a href="#about"><h6>Blog</h6></a></li> -->
-      <!-- <li><a href="#projects"><h6>Projects</h6></a></li> -->
-      <li><a href="/password.html"><h6>Page 2</h6></a></li>
-    </ul> 
-
-   
 
 </body>
 </html>
