--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 
-
 <body class="code-snippets-visible">
   <div class="container">
     <!-- HERO -->
@@ -41,7 +40,7 @@
         <br>
 
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="four columns u-uppcase">
           <div>
             <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
@@ -62,7 +61,7 @@
 
 
 
-    </section>
+    </section> -->
     <br>
     <br>
 
