--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
         <br>
 
       </div>
+<!-- 
+    <div class="row">
+        <div class="four columns u-uppcase">
+          <div>
+            <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
+            <br />
+            <a href="/password.html"><h5>ML Project</h5></a>
+          </div>
+        </div>
+
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/hacker_icon-by-Talha-Dogar.png" width="100vw"><br />
+            <a href="/password.html"><h5>Password generator</h5></a>
+        </div>
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/linux-tux_icon-by-Freepik.png" width="100vw"><br />
+              <a href="/password.html"><h5>Password generator</h5></a>
+
+        </div>
+      </div> -->
+
       <!-- <div class="row">
         <div class="four columns u-uppcase">
           <div>
@@ -62,17 +83,20 @@
 
 
     </section> -->
-    <br>
-    <br>
+      <br>
+      <br>
 
-
+      <a href="/password.html"><h5>Password generator</h5></a>
 
       <section class="u-center" id="about">
 
-        <h1 style="font-size:4rem;margin-bottom:1rem;margin-top:10px;">Password generator</h1>
+        <h1 style="font-size:4rem;margin-bottom:1rem;margin-top:10px;">Test</h1>
 
       </section>
+      <br>
+      <br>
 
+      <br>
 
       <div class="u-center">
         <!-- <h4>Password generator</h4> -->
@@ -88,31 +112,43 @@
 
       </div>
 
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+      <div class="u-center">
 
 
 
-    <style>
-      .pass {
-        height: fit-content;
-        /* padding: 4px, 0; */
-        width: 40rem;
-        /* background-color: rgb(121, 121, 121); */
-        /* background-color: rgb(121, 121, 121); */
-      }
-    </style>
+      </div>
 
-    <script>
 
-      function genPass(len) {
-        var length = len + 6,
-          charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789",
-          res = "";
-        for (var i = 0, n = charset.length; i < length; ++i) {
-          res += charset.charAt(Math.floor(Math.random() * n));
+
+      <style>
+        .pass {
+          height: fit-content;
+          /* padding: 4px, 0; */
+          width: 40rem;
+          /* background-color: rgb(121, 121, 121); */
+          /* background-color: rgb(121, 121, 121); */
         }
-        document.getElementById("password-gen").innerHTML = res
-      }
-    </script>
+      </style>
+
+      <script>
+
+        function genPass(len) {
+          var length = len + 6,
+            charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789",
+            res = "";
+          for (var i = 0, n = charset.length; i < length; ++i) {
+            res += charset.charAt(Math.floor(Math.random() * n));
+          }
+          document.getElementById("password-gen").innerHTML = res
+        }
+      </script>
+    </section>
 
 
 </body>
