--- a/index.html
+++ b/index.html
@@ -22,12 +22,8 @@
       <div class="intro">
         <h5 style="font-size:3rem;margin-bottom:-2.2rem;margin-top:4rem;">Hi, I'm</h5>
         <h1 style="font-size:8rem;margin-bottom:-1rem;margin-top:0px;">Mitch Pearce.</h1>
-        <h5 style="font-size:2rem;margin-bottom:3rem;margin-top:2px;"></h5>
-
-        <p style="font-size:2rem;">I'm an I.T guy.. welcome to my landing page.<br> I will be showcasing some of my
-          projects here soon.</p>
-
-
+        <h5 style="font-size:2rem;margin-bottom:0rem;margin-top:2px;"></h5>
+        <p style="font-size:2rem;">I'm an I.T guy.<br>
 
         <div class="links u-uppcase" style="color:orange">
           <a style="color:orange" href="https://github.com/Mitch454">Github</a> | <a style="color:orange"
@@ -86,11 +82,11 @@
       <br>
       <br>
 
-      <a href="/password.html"><h5>Password generator</h5></a>
+      <h1><a href="/password.html" style="font-size:4rem;margin-bottom:1rem;margin-top:10px;color:white;text-decoration: none;">Password generator</a></h1>
 
       <section class="u-center" id="about">
 
-        <h1 style="font-size:4rem;margin-bottom:1rem;margin-top:10px;">Test</h1>
+
 
       </section>
       <br>
@@ -135,19 +131,22 @@
           /* background-color: rgb(121, 121, 121); */
         }
       </style>
-
-      <script>
-
-        function genPass(len) {
-          var length = len + 6,
-            charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789",
-            res = "";
-          for (var i = 0, n = charset.length; i < length; ++i) {
-            res += charset.charAt(Math.floor(Math.random() * n));
-          }
-          document.getElementById("password-gen").innerHTML = res
+      
+    <script>
+      function genPass(len) {
+        var length = len;
+        var charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+        var res = "";
+        var charsetLength = charset.length;
+        for (var i = 0; i < length; ++i) {
+          res += charset.charAt(Math.floor(Math.random() * charsetLength));
         }
-      </script>
+        document.getElementById("password-gen").textContent = res;
+      }
+    </script>
+
+
+
     </section>
 
 
