--- a/password.html
+++ b/password.html
@@ -37,7 +37,7 @@
           <br>
         </div>
 
-        <button class="click" onclick="genPass(18)">Generate</button><br>
+        <button class="click" onclick="genPass(20)">Generate</button><br>
 
       </div>
 
@@ -53,20 +53,19 @@
         /* background-color: rgb(121, 121, 121); */
       }
     </style>
+<script>
 
-    <script>
-
-      function genPass(len) {
-        var length = len + 6,
-          charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789",
-          res = "";
-        for (var i = 0, n = charset.length; i < length; ++i) {
-          res += charset.charAt(Math.floor(Math.random() * n));
-        }
-        document.getElementById("password-gen").innerHTML = res
-      }
-    </script>
-
+  function genPass(len) {
+    var length = len;
+    var charset = "abcdefghijklmnopqrstuvwxyz.,/@~#;:<>?!%$£ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
+    var res = "";
+    var charsetLength = charset.length;
+    for (var i = 0; i < length; ++i) {
+      res += charset.charAt(Math.floor(Math.random() * charsetLength));
+    }
+    document.getElementById("password-gen").textContent = res;
+  }
+</script>
 
 </body>
 
