--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
         <p style="font-size:2rem;">I'm an I.T guy.<br>
 
         <div class="links u-uppcase" style="color:orange">
-          <a style="color:orange" href="https://github.com/Mitch454">Github</a> | <a style="color:orange"
-            href="https://www.linkedin.com/in/mitch-pearce-253176196">Linkedin</a>
+          <a style="color:orange" href="https://github.com/Mitch454">Github</a> | 
+          
+          <a style="color:orange"
+            href="https://www.linkedin.com/in/mitch-pearce-253176196">Linkedin</a>    |       
+            
+          <a style="color:orange"
+            href="https://mitchpearce.xyz">Blog</a>
+
+
         </div>
 
 
@@ -86,11 +93,11 @@
             generator</a></h1>
         <!-- <input type="text"> -->
 
-        <div class="pass" id="password-gen" style="margin:0 auto;">
+        <div class="pass" id="password-gen" style="margin:0 auto;font-size:3rem;">
 
           <br>
         </div>
-
+<br>
         <button class="click" onclick="genPass(18)">Generate</button><br>
 
       </div>
