--- a/index.html
+++ b/index.html
@@ -39,58 +39,15 @@
 
 
       </div>
-      <!-- 
-    <div class="row">
-        <div class="four columns u-uppcase">
-          <div>
-            <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
-            <br />
-            <a href="/password.html"><h5>ML Project</h5></a>
-          </div>
-        </div>
 
-        <div class="four columns u-uppcase">
-          <img class="col-img" src="img/hacker_icon-by-Talha-Dogar.png" width="100vw"><br />
-            <a href="/password.html"><h5>Password generator</h5></a>
-        </div>
-        <div class="four columns u-uppcase">
-          <img class="col-img" src="img/linux-tux_icon-by-Freepik.png" width="100vw"><br />
-              <a href="/password.html"><h5>Password generator</h5></a>
-
-        </div>
-      </div> -->
-
-      <!-- <div class="row">
-        <div class="four columns u-uppcase">
-          <div>
-            <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
-            <br />
-            ITIL, Infrastructure, Servers, Devops
-          </div>
-        </div>
-
-        <div class="four columns u-uppcase">
-          <img class="col-img" src="img/hacker_icon-by-Talha-Dogar.png" width="100vw"><br />
-          Cybersecurity practitioner & researcher
-        </div>
-        <div class="four columns u-uppcase">
-          <img class="col-img" src="img/linux-tux_icon-by-Freepik.png" width="100vw"><br />
-          Linux & Open source enthusiast
-        </div>
-      </div>
-
-
-
-    </section> -->
       <br>
       <br>
 
 
 
       <div class="u-center">
-        <h1><a href="/password.html"
-            style="font-size:4rem;margin-bottom:1rem;margin-top:10px;color:white;text-decoration: none;">Password
-            generator</a></h1>
+        <h1 style="font-size:4rem;margin-bottom:1rem;margin-top:10px;color:white;text-decoration: none;">
+          Password generator</h1>
         <!-- <input type="text"> -->
 
         <div class="pass" id="password-gen" style="margin:0 auto;font-size:3rem;">
@@ -102,8 +59,6 @@
 
       </div>
 
-      <br>
-      <br>
       <br>
       <br>
       <br>
@@ -148,8 +103,45 @@
 </html>
 
 
+      <!-- 
+    <div class="row">
+        <div class="four columns u-uppcase">
+          <div>
+            <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
+            <br />
+            <a href="/password.html"><h5>ML Project</h5></a>
+          </div>
+        </div>
+
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/hacker_icon-by-Talha-Dogar.png" width="100vw"><br />
+            <a href="/password.html"><h5>Password generator</h5></a>
+        </div>
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/linux-tux_icon-by-Freepik.png" width="100vw"><br />
+              <a href="/password.html"><h5>Password generator</h5></a>
+
+        </div>
+      </div> -->
+
+      <!-- <div class="row">
+        <div class="four columns u-uppcase">
+          <div>
+            <img class="col-img" src="img/code_icon-by-Freepik.png" width="100vw">
+            <br />
+            ITIL, Infrastructure, Servers, Devops
+          </div>
+        </div>
+
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/hacker_icon-by-Talha-Dogar.png" width="100vw"><br />
+          Cybersecurity practitioner & researcher
+        </div>
+        <div class="four columns u-uppcase">
+          <img class="col-img" src="img/linux-tux_icon-by-Freepik.png" width="100vw"><br />
+          Linux & Open source enthusiast
+        </div>
+      </div>
 
 
-</body>
-
-</html>
+    </section> -->
